Time: 1 ms (49.89%), Space: 43 MB (29.82%) - LeetHub