@@ -1,16 +1,15 @@
 class Solution {
     public List<List<Integer>> subsets(int[] nums) {
         List<List<Integer>> res = new ArrayList<>();
-        List<Integer> ans = new ArrayList<>();
-        backTrack(nums,res,ans,0);
+        backTrack(nums,res,new ArrayList<>(),0);
         return res;
     }
-    private void backTrack(int[] a,List<List<Integer>> res,List<Integer> ans,int idx){
-        res.add(new ArrayList<>(ans));
-        for(int i=idx;i<a.length;i++){
-            ans.add(a[i]);
-            backTrack(a,res,ans,i+1);
-            ans.remove(ans.removeLast());
+    private void backTrack(int []a,List<List<Integer>> l,List<Integer> list,int n){
+        l.add(new ArrayList<>(list));
+        for(int i=n;i<a.length;i++){
+            list.add(a[i]);
+            backTrack(a,l,list,i+1);
+            list.remove(list.size()-1);
         }
     }
 }
